logs/tracking/build.make.756.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In member function ‘void DepthFilter::updateFilter(Eigen::Matrix4f, Eigen::Matrix<float, 2, -1>, Eigen::Matrix<float, 2, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:147:22: error: ‘class boost::shared_ptr<Eigen::Matrix<float, 4, -1> >’ has no member named ‘transpose’
  std::cout << filter.transpose() << std::endl;
                      ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
